# c172-preflight

./: .gitignore  README.md  c172-preflight.cabal  c172-preflight.nix  cabal.project  default.nix  nixpkgs.nix  output.ps
latex/: MomentEnvelope.tex
src/: Main.hs
src/Data/Aviation/: C172.hs  Preflight.hs  TakeoffLanding.hs  Units.hs  WB.hs
src/Data/Aviation/C172/: C172AircraftArms.hs  C172Arms.hs  C172MomentEnvelope.hs  Diagrams.hs
src/Data/Aviation/Cessna172/: Preflight.hs
src/Data/Aviation/Cessna172/Preflight/: Arm.hs  MeasuredArm.hs  Moment.hs  TakeoffLanding.hs  Weight.hs
src/Data/Aviation/Cessna172/Preflight/Arm/: Arm.hs  ArmRange.hs  ArmRangeLower.hs  ArmRangeUpper.hs  ArmStatic.hs
src/Data/Aviation/Cessna172/Preflight/MeasuredArm/: MeasuredArm.hs  MeasuredArmRange.hs  MeasuredArmRangeLower.hs  MeasuredArmRangeUpper.hs  MeasuredArmStatic.hs
src/Data/Aviation/Units/: Poundinches.hs
src/Data/Aviation/WB/: Maximumfuel.hs  Moment.hs  TakeoffLanding.hs  Weight.hs  Zerofuel.hs
