name:               c172-preflight
version:            0.0.1
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Copyright (c) 2016 Tony Morris
synopsis:           JSON parser.
category:           Aviation
description:        Pre-flight checks for Cessna 172
homepage:           https://github.com/tonymorris/c172-preflight
bug-reports:        https://github.com/tonymorris/c172-preflight/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/c172-preflight.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 4.8
                    , lens
                    , diagrams
                    , diagrams-cairo
                    , diagrams-core
                    , diagrams-lib
                    , diagrams-rasterific
                    , diagrams-svg
                    , mtl
                    , plots
                    , hgeometry
                    , containers
                    , fixed-vector
                    
  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.Cessna172.Preflight

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8
                    , parsec >= 3.1
                    , quickcheck-text

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
